[package]
name = "urls_to_zip_v2"
authors = ["Steve Wight <northwight@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
futures = "0.3.17"
reqwest = "0.11.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e382bc58" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tempfile = "3.2.0"
zip = "0.5.13"